--- a/src/app/page.css
+++ b/src/app/page.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #ffffff; /* White background */
+  background-color: #E0F2F1; /* White background */
 }
 
 .main {
@@ -14,12 +14,13 @@
 }
 
 .chatContainer {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   display: flex;
   flex-direction: column;
-  background-color: #E0F2F1; /* Light green background */
+  background-color: #FAFAFA; /* Light green background */
   border-radius: 16px;
   padding: 20px;
-  max-width: 600px;
+  max-width: 50%;
   width: 100%;
 }
 
@@ -121,6 +122,7 @@
 @media (max-width: 600px) {
   .chatContainer {
     padding: 16px;
+    max-width: 100%;
   }
 
   .inputField {
